tests/macros/duplicate/transform_async.stderr
error: duplicate option `transform_async`
 --> $DIR/transform_async.rs:4:15
  |
4 |         async transform: todo!(),
  |               ^^^^^^^^^
