tests/macros/duplicate/transform_async.rs
fn main() {
    let q = inquisition::questions![Input {
        async transform: todo!(),
        async transform: todo!(),
    }];
}
